# desktop-cat

./: .gitignore  README.md  desktop-cat.spec  pyproject.toml  requirements-win7.txt  run.py
.github/workflows/: build-windows.yml
assets/models/: README.md
assets/sprites/: README.md
cat/: __init__.py  app.py  config.py  mouse_tracker.py  paths.py  platform_topmost.py  qt.py  tray.py  window.py
cat/core/: __init__.py  action.py  model.py  personality.py  pet_sprite.py  state_machine.py
cat/models/: __init__.py
cat/models/cat/: __init__.py  drawing.py  model.py  poses.py
cat/models/cat/actions/: __init__.py  _helpers.py  alert.py  chase.py  confused.py  groom.py  jump_pounce.py  notice.py  poop.py  pounce.py  run.py  shed.py  sit.py  sleep.py  sniff.py  stalk.py  stretch.py  swat.py  walk.py  wrestle.py
cat/models/cat/states/: __init__.py  _conditions.py  _intents.py  alert_state.py  chasing_state.py  confused_state.py  grooming_state.py  idle_state.py  notice_state.py  playing_state.py  (+3 more)
cat/models/cat3d/: __init__.py  builder.py  mesh_loader.py  model.py  rig.py
cat/models/catsprite/: __init__.py  model.py  sprite_loader.py
cat/utils/: __init__.py  geometry.py
docs/: 打包说明.md
docs/superpowers/specs/: 2026-07-16-desktop-cat-design.md
scripts/: build_macos.sh  build_windows.bat  build_windows7.bat  strip_app.py
tests/: test_actions.py  test_bored.py  test_cat3d.py  test_catsprite_mapping.py  test_conditions.py  test_geometry.py  test_hunt_sequence.py  test_intents.py  test_interaction.py  test_personality.py  test_playing.py  test_state_machine.py
