[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-cat"
version = "0.1.0"
description = "一个会追鼠标、会扑击的桌面宠物（模型可替换）"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
desktop-cat = "cat.app:main"

[tool.setuptools.packages.find]
include = ["cat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
